--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
